--- a/css/response_479.css
+++ b/css/response_479.css
@@ -92,12 +92,6 @@
 
 
 
-    /*-------------
-        Sidebar
-    -------------*/
-
-
-
     /*---------------
         Page head
     ---------------*/
@@ -106,24 +100,6 @@
         font-size: 28px;
         line-height: 36px;
     }
-
-
-
-    /*----------------
-        Block head
-    ----------------*/
-
-
-
-    /*------------------
-        Form elements
-    ------------------*/
-
-
-
-    /*----------------
-        Typography
-    ----------------*/
 
 
 
@@ -142,11 +118,21 @@
     }
 
 
+    .first_section .notice
+    {
+        font-size: 16px;
+
+        padding: 0;
+
+        white-space: normal;
+    }
+
     .first_section .notice .name
     {
-        font-size: 18px;
+        font-size: 28px;
+        line-height: 36px;
 
-        margin-bottom: 8px;
+        margin-bottom: 4px;
     }
 
 
